--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,5 +11,5 @@ jobs:
         with:
           feed-url: https://medium.com/@hamdi-bouallegue/feed
           readme-section: feed
-          max: 10 # max number of items (default 5)
-          template: "#### [{{ title }}]({{ link }}) \n*{{ contentSnippet }}*\n\n"
+          max: 6 # max number of items (default 5)
+          template: "#### [{{ title }}]({{ link }}) \n{{ contentSnippet }}\n\n"
