--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,8 @@
 name: Update readme with blog posts
 on:
-  push:
-    branches: [main]
+  schedule:
+    # Once a day at 8 AM
+    - cron: 0 8 * * *
 
 jobs:
   update:
